# graph_optimization

./: CMakeLists.txt  README.md  package.xml
g2o_graph/: slam2d.g2o  slam2d_after_optimization.g2o
launch/: graph_optimization.launch
scripts/: graph_optimization.py
